classDiagram
    direction TB

    %% Classe Usuario (Base)
    class Usuario {
        +cpf: str
        +nome: str
        +email: str
        +senha: str
        +fazerLogin(email: str, senha: str) bool
    }

    %% Classe Cliente (Herança de Usuario)
    class Cliente {
        +endereco: str
        +carrinho: Carrinho
        +adicionarAoCarrinho(produto: Produto, qtd: int) bool
        +finalizarCompra() Pedido
    }
    Usuario <|-- Cliente : Herança

    %% Classe Administrador (Herança de Usuario)
    class Administrador {
        +cargo: str
    }
    Usuario <|-- Administrador : Herança

    %% Classe Carrinho
    class Carrinho {
        +itens: dict
        +valorTotal: float
        +adicionarItem(produto: Produto, qtd: int) bool
        +removerItem(idProduto: int) bool
        +calcularTotal() float
        +limpar() void
    }
    Cliente "1" o-- "1" Carrinho : Agregação (Associação)

    %% Classe Produto (Base)
    class Produto {
        +codigo: int
        +nome: str
        +preco: float
        +estoque: int
        +exibirDetalhes() dict
        +diminuirEstoque(quantidade: int) bool
        +aumentarEstoque(quantidade: int) void
    }

    %% Classe Roupa (Herança de Produto)
    class Roupa {
        +tamanho: str
        +cor: str
        +tecido: str
        +exibirDetalhes() dict
    }
    Produto <|-- Roupa : Herança

    %% Classe Calçado (Herança de Produto)
    class Calçado {
        +tamanho: int
        +material: str
        +marca: str
        +exibirDetalhes() dict
    }
    Produto <|-- Calçado : Herança

    %% Associação de itens no Carrinho para Produto
    Carrinho "1" --> "*" Produto : Agrega (Código/Produto e Quantidade)

    %% Classe Pedido
    class Pedido {
        +idPedido: int
        +cliente: Cliente
        +produtosPedidos: list
        +status: str
        +alterarStatus(novoStatus: str) void
        +atualizarEstoque(quantidade: int) void
        +gerarNotaFiscal() str
    }
    Pedido "*" --> "1" Cliente : Associação (Cliente que fez o pedido)
    Pedido "*" --> "*" Produto : Associação (Contém itens de produto)
